--- a/src/apollo/core/templates/bootstrap-pagination/pagination.html
+++ b/src/apollo/core/templates/bootstrap-pagination/pagination.html
@@ -1,35 +1,35 @@
-{% load bootstrap_pagination %}
+{% load bootstrap_pagination %}{% load i18n %}
 <div class="pagination {% if alignment == "center" %}pagination-centered{% endif %}{% if alignment == "right" %}pagination-right{% endif %} {% block extra_classes %}{% endblock %}">    
     <ul>    
     {% if show_first_last %}
          <li {% if not page.has_previous %}class="disabled"{% endif %}>         
-            <a title="First Page" href="{{ first_page_url|default:"#" }}">{{first_label}}</a>
+            <a title="{% trans "First Page" %}" href="{{ first_page_url|default:"#" }}">{{first_label}}</a>
          </li>
     {% endif %}
     {% if show_prev_next %}
         <li {% if not page.has_previous %}class="disabled"{% endif %}>
-            <a title="Previous Page" href="{{ previous_page_url|default:"#" }}">{{ previous_label }}</a>
+            <a title="{% trans "Previous Page" %}" href="{{ previous_page_url|default:"#" }}">{{ previous_label }}</a>
         </li>
     {% endif %}    
     {% for pagenum, url in page_urls %}
         {% if page.number == pagenum %}            
             <li class="active">
-                <a title="Current Page" href="#">{{ pagenum }}</a>
+                <a title="{% trans "Current Page" %}" href="#">{{ pagenum }}</a>
             </li>            
         {% else %}
             <li>          
-                <a title="Page {{ pagenum }} of {{ page.paginator.num_pages }}" href="{{ url }}">{{ pagenum }}</a>
+                <a title="{% trans "Page" %} {{ pagenum }} {% trans "of" %} {{ page.paginator.num_pages }}" href="{{ url }}">{{ pagenum }}</a>
             </li>   
         {% endif %}        
     {% endfor %}
     {% if show_prev_next %}
         <li {% if not page.has_next %}class="disabled"{% endif %}>
-            <a title="Next Page" href="{{ next_page_url|default:"#" }}">{{ next_label }}</a>
+            <a title="{% trans "Next Page" %}" href="{{ next_page_url|default:"#" }}">{{ next_label }}</a>
         </li>
     {% endif %}   
     {% if show_first_last %}
         <li {% if not page.has_next %}class="disabled"{% endif %}>            
-            <a title="Last Page" href="{{ last_page_url|default:"#" }}">{{last_label}}</a>                       
+            <a title="{% trans "Last Page" %}" href="{{ last_page_url|default:"#" }}">{{last_label}}</a>                       
         </li>      
     {% endif %}
     </ul> 
@@ -38,7 +38,7 @@
 <div class="pagination {% if alignment == "center" %}pagination-centered{% endif %}{% if alignment == "right" %}pagination-right{% endif %}">    
     <ul>    
         <li class="disabled">
-            <a href="">Showing: <strong>{{ page.start_index }}-{{ page.end_index }}</strong> of <strong>{{ page.paginator.count }}</strong></a>
+            <a href="">{% trans "Showing:" %} <strong>{{ page.start_index }}-{{ page.end_index }}</strong> {% trans "of" %} <strong>{{ page.paginator.count }}</strong></a>
         </li>
     </ul> 
 </div>
