--- a/src/apollo/core/templates/core/checklist_summary.html
+++ b/src/apollo/core/templates/core/checklist_summary.html
@@ -1,4 +1,4 @@
-{% extends "core/layout.html" %}
+{% load i18n %}{% extends "core/layout.html" %}
 {% load apollo %}{% load analysis %}
 {% block content %}
 <div class="row">
@@ -8,7 +8,7 @@
   <div class="span3">
         <form class="form-horizontal pull-right" action="" method="get" accept-charset="utf-8">
           {{ filter_form.sample }}
-          <button class="btn btn-warning" type="submit"><i class="icon-search icon-white"></i> Filter</button>
+          <button class="btn btn-warning" type="submit"><i class="icon-search icon-white"></i> {% trans "Filter" context "verb" %}</button>
         </form>
   </div>
   <div class="span12">
@@ -28,7 +28,7 @@
 	{% else %}
     <table width="100%" class="table table-striped table-bordered">
 	<tr class="warning">
-    <td style="text-align:center">No Data Available</td>
+    <td style="text-align:center">{% trans "No Data Available" %}</td>
     </tr>
     </table>
 	{% endif %}
