--- a/src/apollo/core/templates/core/contact_list.html
+++ b/src/apollo/core/templates/core/contact_list.html
@@ -1,4 +1,4 @@
-{% extends "core/layout.html" %}{% load apollo %}{% load bootstrap_pagination %}
+{% extends "core/layout.html" %}{% load i18n %}{% load apollo %}{% load bootstrap_pagination %}
 {% block javascripts %}
 {% if perms.core.message_observers %}
 {% send_message paginator.count %}
@@ -8,10 +8,10 @@
 {{ page_title }}
 {% if perms.core.message_observers %}
 <div class="btn-group pull-right">
-  <form method="get"><input type="hidden" name="export" value="true" /><button class="btn" type="submit">Export</a></form>
+  <form method="get"><input type="hidden" name="export" value="true" /><button class="btn" type="submit">{% trans "Export" context "verb" %}</a></form>
 </div>
 <div class="btn-group pull-right">
-  <a style="margin-right:1em" id="send_message_modal_btn" href="#send_message" role="button" class="btn btn-success">Send Message</a>
+  <a style="margin-right:1em" id="send_message_modal_btn" href="#send_message" role="button" class="btn btn-success">{% trans "Send Message" %}</a>
 </div>
 {% endif %}
 {% endblock %}
@@ -31,8 +31,8 @@
           {{ filter_form.role }}
           {{ filter_form.partner }}
           {{ filter_form.contact__connection__identity }}
-          <button type="submit" class="btn btn-warning" style="margin-left:2em"><i class="icon-search icon-white"></i> Search</button>
-          <a class="btn form-reset" style="margin-left:0.5em">Clear</a>
+          <button type="submit" class="btn btn-warning" style="margin-left:2em"><i class="icon-search icon-white"></i> {% trans "Search" context "verb" %}</button>
+          <a class="btn form-reset" style="margin-left:0.5em">{% trans "Clear" context "verb" %}</a>
         </div> 
       </form>
     </div>
@@ -44,13 +44,13 @@
     <table class="table table-striped table-bordered table-hover">
       <thead>
         <tr>
-          <th>Observer ID</th>{% for location_type in location_types %}
+          <th>{% trans "Observer ID" %}</th>{% for location_type in location_types %}
           <th>{{ location_type.name }}</th>{% endfor %}
-          <th>Name</th>
-          <th>Role</th>
-          <th>Phone No.</th>
-          <th>Location</th>
-          <th>Organization</th>
+          <th>{% trans "Name" context "adjective" %}</th>
+          <th>{% trans "Role" context "adjective" %}</th>
+          <th>{% trans "Phone No." context "adjective" %}</th>
+          <th>{% trans "Location" context "adjective" %}</th>
+          <th>{% trans "Organization" %}</th>
           {% if perms.core.change_observer %}<th></th>{% endif %}
         </tr>
       </thead>
@@ -64,7 +64,7 @@
           <td>{{ contact.phone|default_if_none:"" }}</td>
           <td>{{ contact.location }}</td>
           <td>{{ contact.partner|default_if_none:"" }}</td>
-          {% if perms.core.change_observer %}<td style="text-align:center"><a href="{% url contact_edit contact.pk %}">Edit</a></td>{% endif %}
+          {% if perms.core.change_observer %}<td style="text-align:center"><a href="{% url contact_edit contact.pk %}">{% trans "Edit" context "verb" %}</a></td>{% endif %}
         </tr>
         {% endfor %}
       </tbody>
