--- a/src/apollo/core/templates/core/forms_menu.html
+++ b/src/apollo/core/templates/core/forms_menu.html
@@ -1,6 +1,6 @@
-{% if checklist_forms %}
+{% load i18n %}{% if checklist_forms %}
 {% if checklist_forms|length > 1 %}
-<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-check"></i> Checklists <b class="caret"></b></a>
+<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-check"></i> {% trans "Checklists" %} <b class="caret"></b></a>
     <ul class="dropdown-menu">
         {% for form in checklist_forms %}
         <li><a href="{% url submissions_list form.pk %}"><i class="icon-check"></i> {{ form.name }}</a></li>
@@ -14,7 +14,7 @@
 
 {% if incident_forms %}
 {% if incident_forms|length > 1 %}
-<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-check"></i> Incidents <b class="caret"></b></a>
+<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-check"></i> {% trans "Incidents" %} <b class="caret"></b></a>
     <ul class="dropdown-menu">
         {% for form in incident_forms %}
         <li><a href="{% url submissions_list form.pk %}"><i class="icon-check"></i> {{ form.name }}</a></li>
@@ -29,7 +29,7 @@
 {% if perms.core.can_verify %}
 {% if verification_forms %}
 {% if verification_forms|length > 1 %}
-<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-warning-sign"></i> Verification <b class="caret"></b></a>
+<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-warning-sign"></i> {% trans "Verification" %} <b class="caret"></b></a>
     <ul class="dropdown-menu">
         {% for form in verification_forms %}
         <li><a href="{% url verifications_list form.pk %}"><i class="icon-warning-sign"></i> {{ form.name }}</a></li>
@@ -37,7 +37,7 @@
     </ul>
 </li>
 {% elif verification_forms|length == 1 %}
-<li><a href="{% url verifications_list verification_forms.0.pk %}"><i class="icon-warning-sign"></i> Verification</a></li>
+<li><a href="{% url verifications_list verification_forms.0.pk %}"><i class="icon-warning-sign"></i> {% trans "Verification" %}</a></li>
 {% endif %}
 {% endif %}
 {% endif %}
