--- a/src/apollo/core/templates/core/login.html
+++ b/src/apollo/core/templates/core/login.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+<!DOCTYPE html>{% load i18n %}
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>User Login</title>
+    <title>{% trans "User Login" %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -23,25 +23,25 @@
     <div class="container-fluid">
       <div class="row-fluid">
         <div class="span3 offset4">
-          <legend>User Login</legend>
+          <legend>{% trans "User Login" %}</legend>
           <form class="form-vertical" action="" method="POST" accept-charset="utf-8">
             {% csrf_token %}
             {% if form.errors %}
-            <div class="alert alert-danger">Your username and password <strong>did not match</strong>. Please try again.</div>
+            <div class="alert alert-danger">{% blocktrans %}Your username and password <strong>did not match</strong>. Please try again.{% endblocktrans %}</div>
             {% endif %}
             <div class="control-group">
               <div class="controls">
-                <input type="text" name="username" id="username" class="input-xlarge" placeholder="Username">
+                <input type="text" name="username" id="username" class="input-xlarge" placeholder="{% trans "Username" %}">
               </div>
             </div>
             <div class="control-group">
               <div class="controls">
-                <input type="password" name="password" id="password" class="input-xlarge" placeholder="Password">
+                <input type="password" name="password" id="password" class="input-xlarge" placeholder="{% trans "Password" %}">
               </div>
             </div>
             <div class="control-group">
               <div class="controls">
-                <button type="submit" class="btn">Sign In</button>
+                <button type="submit" class="btn">{% trans "Sign In" %}</button>
               </div>
             </div>
           </form>
