--- a/src/apollo/core/templates/core/submission_add.html
+++ b/src/apollo/core/templates/core/submission_add.html
@@ -1,4 +1,4 @@
-{% extends "core/layout.html" %}
+{% extends "core/layout.html" %}{% load i18n %}
 {% load apollo %}
 {% block content %}
   <form action="" method="post">
@@ -8,11 +8,11 @@
       <table class="table table-bordered">
         <thead>
           <tr>
-            <th>Observer ID</th>
+            <th>{% trans "Observer ID" %}</th>
             <td>{{ form.observer }}</td>
           </tr>
           <tr>
-            <th>Location</th>
+            <th>{% trans "Location" %}</th>
             <td>{{ form.location }}</td>
           </tr>
         </thead>
@@ -46,15 +46,15 @@
           {% endfor %}
           {% endfor %}
           <tr>
-            <td style="text-align: right">Witness</td>
+            <td style="text-align: right">{% trans "Witness" %}</td>
             <td colspan="2">{{ form.data__witness }}</td>
           </tr>
           <tr>
-            <td style="text-align: right">Description</td>
+            <td style="text-align: right">{% trans "Description" %}</td>
             <td colspan="2">{{ form.data__description }}</td>
           </tr>
           <tr>
-            <td style="text-align: right">Status</td>
+            <td style="text-align: right">{% trans "Status" %}</td>
             <td colspan="2">{{ form.data__status }}</td>
           </tr>
         </tbody>
@@ -64,10 +64,10 @@
 
   <div class="row">
     <div class="offset8 span2">
-      <button type="submit" class="btn btn-info btn-large btn-block">Save</button>
+      <button type="submit" class="btn btn-info btn-large btn-block">{% trans "Save" context "verb" %}</button>
     </div>
     <div class="span2">
-      <a class="btn btn-large btn-block" href="{% url submissions_list form_pk %}">Cancel</a>
+      <a class="btn btn-large btn-block" href="{% url submissions_list form_pk %}">{% trans "Cancel" context "verb" %}</a>
     </div>
   </div>
   </form>
