--- a/src/apollo/core/templates/core/submission_filter.html
+++ b/src/apollo/core/templates/core/submission_filter.html
@@ -1,4 +1,4 @@
-{% load apollo %}
+{% load apollo %}{% load i18n %}
 <div class="well" style="padding-bottom:0">
   <form action="{% url submissions_list form.pk %}" method="post" id="filter">
     {% csrf_token %}
@@ -16,8 +16,8 @@
     </div>
     {% endif %}
     <div class="">
-      <button type="submit" class="btn btn-warning"><i class="icon-search icon-white"></i> Search</button>
-      <a class="btn form-reset">Clear</a>
+      <button type="submit" class="btn btn-warning"><i class="icon-search icon-white"></i> {% trans "Search" context "verb" %}</button>
+      <a class="btn form-reset">{% trans "Clear" context "verb" %}</a>
     </div>
   </form>
 </div>
