--- a/src/apollo/core/templates/core/submission_header.html
+++ b/src/apollo/core/templates/core/submission_header.html
@@ -1,10 +1,10 @@
-<tr>
-    <th>Observer ID</th>
+{% load i18n %}<tr>
+    <th>{% trans "Observer ID" %}</th>
     {% for location_type in location_types %}
     <th>{{ location_type.name }}</th>
     {% endfor %}
-    <th>Observer</th>
-    <th>Phone</th>
+    <th>{% trans "Observer" %}</th>
+    <th>{% trans "Phone" %}</th>
     {% if form.type == 'CHECKLIST' %}
     {% for group in form_groups %}
     <th style="text-align:center">{% if group.abbr %}<abbr title="{{ group.name }}">{{ group.abbr }}</abbr>{% else %}{{ group.name }}{% endif %}</th>
@@ -16,5 +16,5 @@
     <th style="text-align:center"><abbr title="Status"><i class="icon-eye-open"></i></abbr></th>
     {% endif %}
     <th style="text-align:center"><abbr title="Phone Verification"><i class="icon-signal"></i></abbr></th>
-    {% if perms.core.change_submission %}<th style="text-align:center">Edit</th>{% endif %}
+    {% if perms.core.change_submission %}<th style="text-align:center">{% trans "Edit" %}</th>{% endif %}
 </tr>
