--- a/src/apollo/core/templates/core/verification_edit.html
+++ b/src/apollo/core/templates/core/verification_edit.html
@@ -1,5 +1,5 @@
 {% extends "core/layout.html" %}
-{% load apollo %}{% load comments %}{% load humanize %}{% load static %}
+{% load apollo %}{% load comments %}{% load humanize %}{% load static %}{% load i18n %}
 {% block content %}
   <form action="" method="post" style="margin-bottom:.5em;">
     {% csrf_token %}
@@ -8,15 +8,15 @@
       <table class="table table-bordered">
         <thead>
           <tr>
-            <th width="20%">Observer</th>
+            <th width="20%">{% trans "Observer" %}</th>
             <td><strong>{{ submission.submissions.all.0.observer.observer_id }}</strong> &mdash; <strong>{{ submission.submissions.all.0.observer.name }}</strong>{% if submission.submissions.all.0.observer.phone %} ({{ submission.submissions.all.0.observer.phone }}){% endif %}</td>
           </tr>
           <tr>
-            <th>Role</th>
+            <th>{% trans "Role" %}</th>
             <td>{{ submission.submissions.all.0.observer.role }}</td>
           </tr>
           <tr>
-            <th>Location</th>
+            <th>{% trans "Location" %}</th>
             <td><strong>{{ submission.location }}</strong></td>
           </tr>
           {% if location_types %}
@@ -26,8 +26,8 @@
           </tr>
           {% endif %}
           <tr>
-            <th>Supervisor</th>
-            <td>{{ submission.submissions.all.0.observer.supervisor|default_if_none:"<em>N/A</em>" }}</td>
+            <th>{% trans "Supervisor" %}</th>
+            <td>{{ submission.submissions.all.0.observer.supervisor|default_if_none:_("<em>N/A</em>") }}</td>
           </tr>
         </thead>
       </table>
@@ -38,12 +38,12 @@
           <tr>
             <td style="text-align: right" width="20%">{{ flag.name }}</td>
             <td>
-              {% if submission.data|keyvalue:field_name|flag_status:'verified' %}<img src="{% static "img/blue_dot.png" %}" title="Verified" alt="Verified" height="13" width="13" />
-              {% elif submission.data|keyvalue:field_name|flag_status:'rejected' %}<img src="{% static "img/black_dot.png" %}" title="Rejected" alt="Rejected" height="13" width="13" />
-              {% elif submission.data|keyvalue:field_name|flag_status:'serious_problem' %}<img src="{% static "img/red_dot.png" %}" title="Serious Problem" alt="Serious Problem" height="13" width="13" />
-              {% elif submission.data|keyvalue:field_name|flag_status:'problem' %}<img src="{% static "img/darkyellow_dot.png" %}" title="Problem" alt="Problem" height="13" width="13" />
-              {% elif submission.data|keyvalue:field_name|flag_status:'no_problem' %}<img src="{% static "img/green_dot.png" %}" title="No Problem" alt="No Problem" height="13" width="13" />
-              {% else %}<img src="{% static "img/white_dot.png" %}" title="No Data" alt="No Data" height="13" width="13" />
+              {% if submission.data|keyvalue:field_name|flag_status:'verified' %}<img src="{% static "img/blue_dot.png" %}" title="{% trans "Verified" %}" alt="{% trans "Verified" %}" height="13" width="13" />
+              {% elif submission.data|keyvalue:field_name|flag_status:'rejected' %}<img src="{% static "img/black_dot.png" %}" title="{% trans "Rejected" %}" alt="{% trans "Rejected" %}" height="13" width="13" />
+              {% elif submission.data|keyvalue:field_name|flag_status:'serious_problem' %}<img src="{% static "img/red_dot.png" %}" title="{% trans "Serious Problem" %}" alt="{% trans "Serious Problem" %}" height="13" width="13" />
+              {% elif submission.data|keyvalue:field_name|flag_status:'problem' %}<img src="{% static "img/darkyellow_dot.png" %}" title="{% trans "Problem" %}" alt="{% trans "Problem" %}" height="13" width="13" />
+              {% elif submission.data|keyvalue:field_name|flag_status:'no_problem' %}<img src="{% static "img/green_dot.png" %}" title="{% trans "No Problem" %}" alt="{% trans "No Problem" %}" height="13" width="13" />
+              {% else %}<img src="{% static "img/white_dot.png" %}" title="{% trans "No Data" %}" alt="{% trans "No Data" %}" height="13" width="13" />
               {% endif %}
             </td>
           </tr>
@@ -87,10 +87,10 @@
 
   <div class="row navbar-fixed-bottom" style="bottom:0px; margin-left:1.75em; background:#fff; padding-top:1em; padding-bottom:1em;">
     <div class="offset8 span2">
-      <button type="submit" class="btn btn-info btn-large btn-block">Save</button>
+      <button type="submit" class="btn btn-info btn-large btn-block">{% trans "Save" context "verb" %}</button>
     </div>
     <div class="span2">
-      <a class="btn btn-large btn-block" href="{% url verifications_list object.form.pk %}">Cancel</a>
+      <a class="btn btn-large btn-block" href="{% url verifications_list object.form.pk %}">{% trans "Cancel" context "verb" %}</a>
     </div>
   </div>
   </form>
