--- a/src/apollo/core/templates/core/verification_header.html
+++ b/src/apollo/core/templates/core/verification_header.html
@@ -1,12 +1,13 @@
+{% load i18n %}
 <tr>
-    <th>Observer ID</th>
+    <th>{% trans "Observer ID" %}</th>
     {% for location_type in location_types %}
     <th>{{ location_type.name }}</th>
     {% endfor %}
-    <th>Observer</th>
+    <th>{% trans "Observer" %}</th>
     {% for flag in form_flags %}
     <th style="text-align:center">{{ flag }}</th>
     {% endfor %}
     <th style="text-align:center"><abbr title="Status"><i class="icon-eye-open"></i></abbr></th>
-    {% if perms.core.change_submission %}<th style="text-align:center">Edit</th>{% endif %}
+    {% if perms.core.change_submission %}<th style="text-align:center">{% trans "Edit" context "verb" %}</th>{% endif %}
 </tr>
