--- a/src/apollo/messagelog/templates/messagelog/message_list.html
+++ b/src/apollo/messagelog/templates/messagelog/message_list.html
@@ -1,8 +1,8 @@
-{% extends "core/layout.html" %}{% load bootstrap_pagination %}
+{% extends "core/layout.html" %}{% load bootstrap_pagination %}{% load i18n %}
 {% block title %}
 {{ page_title }}
 {% if perms.messagelog.export_messages %}
-<a class="btn pull-right" href="{% url messages_list_export "xls" %}">Export</a>
+<a class="btn pull-right" href="{% url messages_list_export "xls" %}">{% trans "Export" context "verb" %}</a>
 {% endif %}
 {% endblock %}
 {% block content %}
@@ -15,10 +15,10 @@
           {{ filter_form.mobile }}
           {{ filter_form.text }}
           <div class="input-append date span2 datesel" data-date="" data-date-format="yyyy-mm-dd">
-            <input class="span2" name="created" placeholder="Date" style="width:129px" size="16" type="text" value="{{ filter_form.created.value|default_if_none:"" }}" readonly="readonly">
+            <input class="span2" name="created" placeholder="{% trans "Date" %}" style="width:129px" size="16" type="text" value="{{ filter_form.created.value|default_if_none:"" }}" readonly="readonly">
             <span class="add-on"><i class="icon-calendar"></i></span>
           </div>
-          <button type="submit" style="margin-left:1em" class="btn btn-warning"><i class="icon-search icon-white"></i> Search</button> <a class="btn form-reset" style="margin-left:0.5em">Clear</a>
+          <button type="submit" style="margin-left:1em" class="btn btn-warning"><i class="icon-search icon-white"></i> {% trans "Search" context "verb" %}</button> <a class="btn form-reset" style="margin-left:0.5em">{% trans "Clear" context "verb" %}</a>
         </div>
       </form>
     </div>
@@ -30,11 +30,11 @@
     <table class="table table-striped table-bordered table-hover" style="table-layout:fixed">
       <thead >
         <tr>
-          <th width="7%">Date</th>
-          <th width="7%">Time</th>
-          <th width="10%">Mobile</th>
-          <th width="7%">Direction</th>
-          <th width="60%">Text</th>
+          <th width="7%">{% trans "Date" %}</th>
+          <th width="7%">{% trans "Time" %}</th>
+          <th width="10%">{% trans "Mobile" %}</th>
+          <th width="7%">{% trans "Direction" %}</th>
+          <th width="60%">{% trans "Text" %}</th>
         </tr>
       </thead>
       <tbody>
@@ -43,12 +43,12 @@
           <td>{{ message.created|date:"D j-M" }}</td>
           <td>{{ message.created|date:"g:i a" }}</td>
           <td>{{ message.mobile }}</td>
-          <td>{% if message.direction == 1 %}IN{% else %}OUT{% endif %}</td>
+          <td>{% if message.direction == 1 %}{% trans "IN" context "adjective" %}{% else %}{% trans "OUT" context "adjective" %}{% endif %}</td>
           <td style="word-wrap:break-word">{{ message.text }}</td>
         </tr>
         {% empty %}
         <tr class="warning">
-          <td style="text-align:center" colspan="5">No Data Available</td>
+          <td style="text-align:center" colspan="5">{% trans "No Data Available" %}</td>
         </tr>
         {% endfor %}
       </tbody>
